# M2HImage

./: .gitignore  README.md  build_cache.py  build_identity_bank.py  build_identity_bank_v2.py  build_region_masks_z.py  conditions.py  dataset.py  diagnose_a2.py  environment.yml  eval_a4_gate_report.py  eval_b2.py  eval_b2_local_metrics.py  eval_b2_make_vis.py  eval_b2_metrics.py  eval_gate_report.py  eval_watcher.py  phase0.py  phase0_diagnose.py  pulid_flux.py  pyproject.toml  speed_bench.py  train_paired.py  train_recognizer.py
archive/legacy_sdxl/: README.md
archive/legacy_sdxl/configs/: exp01_paired.yaml  exp02_cf_cloth.yaml  preprocess.yaml
archive/legacy_sdxl/docs/: EXPERIMENT_LOG_TEMPLATE.md  EXPERIMENT_TODO.md
archive/legacy_sdxl/mcic/: __init__.py
archive/legacy_sdxl/mcic/data/: __init__.py
archive/legacy_sdxl/mcic/inference/: generate.py
archive/legacy_sdxl/mcic/losses/: core.py
archive/legacy_sdxl/mcic/models/: gated_attention.py
archive/legacy_sdxl/mcic/preprocess/: __init__.py  run.py
archive/legacy_sdxl/mcic/training/: branches.py  train.py
archive/legacy_sdxl/mcic/utils/: config.py
archive/legacy_sdxl/scripts/: evaluate.sh  train_exp01.sh  train_exp03.sh
archive/legacy_sdxl/tests/: test_config.py  test_masks.py  test_pairs.py
configs/: a2_diff.yaml  a4_directed.yaml  b2_cont.yaml  data.yaml  eval.yaml  exp03_cf_identity.yaml  warmup.yaml
docs/: DATASET_SPEC.md  MODEL_DESIGN.md
docs/results/a2_gate/: README.md  a2_report.md  b2cont_report.md  diagnosis.json  diagnosis.md  gate_report.json  gate_report.md
docs/results/a4_gate/: gate_report.json  gate_report.md  metric_bundle.json  metric_report.md
mcic/data/: dataset.py  pairs.py
mcic/evaluation/: evaluate.py
mcic/inference/: __init__.py
mcic/models/: __init__.py  conditioning.py  identity.py  sdxl_mcic.py
mcic/preprocess/: audit.py  parsing.py
mcic/utils/: image.py
metrics/: __init__.py  common.py  garment_sim.py  headpose_mae.py  heldout_id.py
prompts/: Counterfactual Identity Consistency.md
scripts/: a2_vram_probe.py  a4_preflight.py  a4_vram_probe.py  audit_data.sh  phase0_vram_train_step.py  phase1_vram_train_step.py  preprocess.sh  run_a2_gate.sh  run_a4_gate.sh  run_b2_generation.sh  run_gatefix_to_b2.sh  run_phase1_pipeline.sh  sanity_flux_timestep.py  train_exp02.sh  verify_condition_gates.py
tests/: test_a2_differential.py  test_a4_directed_model.py  test_a4_gate_report.py  test_a4_sampling.py  test_condition_adapter_gates.py  test_preprocess.py  test_pulid_checkpoint_context.py  test_train_recognizer.py  test_yaml_extends.py
tools/: arcface_bank_server.py  arcface_embed.py  arcface_embed_server.py
