[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "m2himage"
version = "0.2.0"
description = "FLUX Phase 1 paired warmup and B2 baseline code for M2HImage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "timm",
  "onnxruntime",
  "facexlib",
  "torchsde",
  "SentencePiece",
  "ftfy",
  "accelerate",
  "bitsandbytes",
  "diffusers",
  "insightface",
  "lpips==0.1.4",
  "numpy",
  "opencv-python",
  "peft",
  "Pillow",
  "PyYAML",
  "safetensors",
  "scikit-image",
  "torch",
  "torchvision",
  "tqdm",
  "transformers",
  "uniface==3.7.1",
  "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = ["metrics"]
py-modules = [
  "build_cache",
  "conditions",
  "dataset",
  "eval_b2",
  "eval_b2_metrics",
  "eval_b2_make_vis",
  "eval_watcher",
  "pulid_flux",
  "speed_bench",
  "train_paired",
]

[tool.ruff]
line-length = 140
target-version = "py310"
