[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "m2himage"
version = "0.3.0"
description = "FLUX paired warmup, A2 differential training, and B2/A2 gate evaluation for M2HImage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "timm",
  "onnxruntime",
  "facexlib",
  "torchsde",
  "SentencePiece",
  "ftfy",
  "accelerate",
  "bitsandbytes",
  "diffusers",
  "insightface",
  "lpips==0.1.4",
  "matplotlib",
  "numpy",
  "opencv-python",
  "peft",
  "Pillow",
  "PyYAML",
  "safetensors",
  "scikit-image",
  "scipy",
  "torch",
  "torchvision",
  "tqdm",
  "transformers",
  "uniface==3.7.1",
  "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = ["metrics"]
py-modules = [
  "build_cache",
  "build_identity_bank",
  "build_region_masks_z",
  "conditions",
  "dataset",
  "eval_b2",
  "eval_b2_metrics",
  "eval_b2_make_vis",
  "eval_gate_report",
  "eval_watcher",
  "pulid_flux",
  "speed_bench",
  "train_paired",
]

[tool.ruff]
line-length = 140
target-version = "py310"
